# PyMemSim

./: .gitignore  README.md  pyproject.toml  setup.py
PyMemLab/: __init__.py
PyMemLab/config/: __init__.py  settings.py
PyMemLab/docs/: core.py  hfm.py
examples/: exp-0.py  tools.py
examples/hfm/: gas-hfm-exp-1.py  gas-hfm-exp-2.py  liquid-hfm-exp-1.py
examples/plot/: plot_res.py
examples/source/: gas_load_model_source.py  gas_model_source_exp_1.py
examples/thermodb/: ethane.pkl  methane.pkl  nitrogen.pkl  propane.pkl
examples/thermodb_calc/: thermo-exp-1.py  thermo-exp-2.py
pymemsim/: __init__.py  app.py
pymemsim/configs/: __init__.py  info.py
pymemsim/core/: gas_hfm.py  gas_hfm_co_current.py  gas_hfm_counter_current.py  gas_hfmx.py  hfmc.py  liquid_hfm.py  liquid_hfmx.py  mc.py
pymemsim/docs/: __init__.py  hfm.py
pymemsim/models/: __init__.py  hfm.py  ref.py  results.py
pymemsim/solvers/: __init__.py  countercurrent_shooting.py
pymemsim/sources/: thermo_model_inputs.py  thermo_model_source.py  thermo_reaction.py  thermo_source.py  thermo_source_core.py
pymemsim/thermo/: main.py
pymemsim/utils/: __init__.py  input_tools.py  opt_tools.py  reaction_tools.py  result_tools.py
tests/: test1.py  test_hfm_flow_modes.py  test_result_tools.py
