[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymemsim"
version = "0.2.1"
description = "PyMemSim is a Python package for modelling of membrane-based separation systems."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Sina Gilassi", email = "sina.gilassi@gmail.com"}
]
keywords = [
    "chemical-engineering",
    "process-simulation",
    "process-modelling",
    "membrane-separation",
    "hollow-fiber-membrane",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "pycuc",
    "pythermodb",
    "pythermolinkdb",
    "pythermodb-settings",
    "pythermocalcdb",
    "pyreactsim-core",
]

[project.urls]
Homepage = "https://github.com/sinagilassi/PyMemSim"
Source = "https://github.com/sinagilassi/PyMemSim"
Tracker = "https://github.com/sinagilassi/PyMemSim/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
    "examples",
    "examples.*",
    "notebooks",
    "notebooks.*",
    "statics",
    "statics.*",
    "private",
    "private.*",
    "app",
    "app.*"
]

[tool.setuptools.package-data]
pymemsim = [
    "config/*.yml",
    "data/*.csv",
    "templates/*.html",
    "static/*",
    "static/**/*"
]
